profile and icon changed

--- a/css/styles.css
+++ b/css/styles.css
@@ -11588,10 +11588,10 @@ html {
   max-width: 40rem;
 }
 .profile .profile-img {
-  height: 80vw;
-  max-height: 45rem;
+  height: 60vw;
+  max-height: 30rem;
   position: absolute;
-  bottom: 0;
+  bottom: 20px;
   left: 50%;
   transform: translateX(-50%);
 }
